--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,7 +26,7 @@ USER node
 
 # Copy the rest of the source files into the image.
 COPY . .
-RUN npm install
+RUN sudo npm install
 
 # Expose the port that the application listens on.
 EXPOSE 3000
