--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -22,11 +22,10 @@ WORKDIR /usr/src/app
 # into this layer.
 
 # Run the application as a non-root user.
-USER node
 
 # Copy the rest of the source files into the image.
 COPY . .
-RUN sudo npm install
+RUN npm install
 
 # Expose the port that the application listens on.
 EXPOSE 3000
